Changes
=======

Version 0.4
-----------

- New style_multiple() function to easily render and apply colors to multiple layers in the API - #20
- New render_multiple() function to easily render multiple layers in the API - #20
- New ascii2array() and array2ascii() functions
- Support for colors and multiple layers on the commandline and in the API - #14, #15
- Zoom in on a specific area with bbox flag and param for render() - #14
- New stack() function to overlay rendered layers - #14
- New paginate() function to easily iterate over features for the CLI - #13
- New style() function to apply colors to a rendering - #15
- render() now has a default width - #12
- render() is now smarter about handling GeoJSON geometry, features, or other iterables - #11