@@ -4,6 +4,8 @@ Changes
 Version 0.4
 -----------
 
+- Width arguments now specify number of text columns rather than raster width - #30
+- New min_bbox() function to easily compute the minimum bbox from geometry iterators - #27
 - New style_multiple() function to easily render and apply colors to multiple layers in the API - #20
 - New render_multiple() function to easily render multiple layers in the API - #20
 - New ascii2array() and array2ascii() functions
@@ -14,3 +16,4 @@ Version 0.4
 - New style() function to apply colors to a rendering - #15
 - render() now has a default width - #12
 - render() is now smarter about handling GeoJSON geometry, features, or other iterables - #11
+- Removed --no-all-touched, -at, -nat, and -i in favor of just --all-touched and --iterate - #29
